--- a/1.1-sustainability-targets/TargetsProj/ProductsAndAccess/templates/ProductsAndAccess/detail.html
+++ b/1.1-sustainability-targets/TargetsProj/ProductsAndAccess/templates/ProductsAndAccess/detail.html
@@ -1,12 +1,10 @@
-<form action="{% url 'ProductsAndAccess:results' product.id %}" method="post">
-    {% csrf_token %}
-    <fieldset>
-        <legend><h1>{{ product.Product_Name }}</h1></legend>
-        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-        {% for route in product.route_set.all %}
-            <input type="radio" name="route" id="route{{ forloop.counter }}" value="{{ route.id }}">
-            <label for="route{{ forloop.counter }}">{{ route.Title }}</label><br>
-        {% endfor %}
-    </fieldset>
-    <input type="submit" value="Vote">
-    </form>
+<h1>{{ product.Product_Name }}</h1>
+
+<ul>
+{% for route in product.route_set.all %}
+<h2><li>{{ route.Title }} </h2>
+        <ol><li>{{ route.Description }}
+{% endfor %}
+</ul>
+
+<a href="{% url 'ProductsAndAccess:index' %}">Back</a>
